--- a/manifest.json
+++ b/manifest.json
@@ -2,8 +2,8 @@
 
   "manifest_version": 2,
   "author": "Kevin Heruer <k.heruer@gmail.com>",
-  "homepage_url": "https://github.com/laetificat/tweakers-dom-fetcher",
-  "name": "Tweakers Naar Google Docs Spreadsheets",
+  "homepage_url": "https://github.com/laetificat/tweakers-to-google-docs",
+  "name": "Tweakers to Google Docs",
   "version": "1.0",
   "permissions": [
     "menus",
@@ -16,14 +16,14 @@
 
   "applications": {
     "gecko": {
-      "id": "tweakers-dom-fetcher@laetificat.com",
+      "id": "tweakers-to-google-docs@laetificat.com",
       "strict_min_version": "56.0"
     }
   },
 
   "default_locale": "en",
 
-  "description": "Kopieer een tweakers product data om te verwerken in Google Docs Spreadsheets.",
+  "description": "Copy a Tweakers product to your clipboard to paste into Google Docs.",
 
   "icons": {
     "48": "assets/icons/icon-48.png",
